name:                chat
version:             0.1.0.0
synopsis:            A simple chat system, for demo purposes.
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Pasqualino `Titto` Assini
maintainer:          tittoassini@gmail.com
copyright:           Copyright: (c) 2015 Pasqualino `Titto` Assini
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable hchat
  hs-source-dirs:      app
  main-is:             hchat.hs
  other-modules: Model
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,transformers,async,pipes,typed,router-api
  default-language:    Haskell2010

executable hchat-history
  hs-source-dirs:      app
  main-is:             hchat-history.hs
  other-modules: Model
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,transformers,typed,router-api
  default-language:    Haskell2010
